--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b3e2dea5f4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/portfolio.css">
 </head>
 
 <body>
-
+    <div class=" container d-flex bg-primary">
+        <h1>hello</h1>
+        <h2>there</h2><i class="fa-brands fa-x-twitter"></i>
+    </div>
 </body>
 
 </html>
