--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porfolio-project</title>
+    <meta name="description" content="my official portfolio website">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -20,10 +21,44 @@
 </head>
 
 <body>
-    <div class=" container d-flex bg-primary">
-        <h1>hello</h1>
-        <h2>there</h2><i class="fa-brands fa-x-twitter"></i>
-    </div>
+    <section class="hero  vh-100 ">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary mb-5">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="/images/ceey.png" alt="logo" width="100" class="img-fluid">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Work</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!--nav ends here-->
+
+        <h2 class="text-center mt-5">👋🏽 Hi, i am </h2>
+        <h1 class="text-center">Cynthia Ekhoe</h1>
+        <p class="text-center mb-5 mt-2">Front-end developer based in Nigeria</p>
+        <div class="text-center"><a href="#" class="hero-btn btn btn-secondary  fs-5">Contact Me</a></div>
+
+
+    </section>
 </body>
 
 </html>
