build home page

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 <body>
     <section class="hero  vh-100 ">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary mb-5">
+        <nav class="navbar navbar-expand-lg  mb-5">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="/images/ceey.png" alt="logo" width="100" class="img-fluid">
+                    <img src="/images/ceey (1).png" alt="logo" width="100" class="img-fluid">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,10 +55,58 @@
         <h2 class="text-center mt-5">👋🏽 Hi, i am </h2>
         <h1 class="text-center">Cynthia Ekhoe</h1>
         <p class="text-center mb-5 mt-2">Front-end developer based in Nigeria</p>
-        <div class="text-center"><a href="#" class="hero-btn btn btn-secondary  fs-5">Contact Me</a></div>
-
+        <div class="text-center"><a href="#" class="hero-btn btn btn-secondary  ">Contact Me</a></div>
 
     </section>
+    <div class="container">
+        <p class="text-center m-5"> Featured Project which my best projects be choice to show</p>
+        <div class="row">
+            <div class="col-6"></div>
+            <div class="col-6">
+
+                <h2 class="display-2 mb-5">Yogurt Project</h2>
+                <p class="mb-4 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and
+                    Consonantia,
+                    there
+                    live the blind
+                    texts.
+                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A
+                    small
+                    river named
+                    Duden flows by</p>
+                <div><a href="#" class="btn btn-outline">View detail project</a></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <h2 class="display-2 mb-5">Weather App</h2>
+                <p class="mb-4 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and
+                    Consonantia,
+                    there live the blind texts.
+                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A
+                    small river named
+                    Duden flows by</p>
+                <div><a href="#" class="btn btn-outline">View detail project</a></div>
+            </div>
+            <div class="col-6">
+
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6"></div>
+            <div class="col-6">
+
+                <h2 class="display-2 mb-5">Dictionary App</h2>
+                <p class="mb-4 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and
+                    Consonantia,
+                    there live the blind texts.
+                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A
+                    small river named
+                    Duden flows by</p>
+                <div><a href="#" class="btn btn-outline">View detail project</a></div>
+            </div>
+        </div>
 </body>
 
 </html>
