--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@
     </section>
     <div class="container">
         <p class="text-center m-5"> Featured Project which my best projects be choice to show</p>
-        <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6">
+        <div class="row my-5">
+            <div class="col-md-6 d-none d-md-block">
+                <img src="/images/images.png" alt="youghurt article" class="img-fluid">
+            </div>
+            <div class="col-md-6 pt-5">
 
-                <h2 class="display-2 mb-5">Yogurt Project</h2>
-                <p class="mb-4 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and
+                <h2 class="display-2 mb-5  text-md-start">Yogurt Project</h2>
+                <p class="mb-4 text-muted text-md-start">Far far away, behind the word mountains, far from the countries
+                    Vokalia and
                     Consonantia,
                     there
                     live the blind
@@ -74,37 +77,42 @@
                     small
                     river named
                     Duden flows by</p>
-                <div><a href="#" class="btn btn-outline">View detail project</a></div>
+                <div><a href="#" class="btn btn-outline  d-block d-sm-inline">View detail project</a></div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-6">
-                <h2 class="display-2 mb-5">Weather App</h2>
-                <p class="mb-4 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and
+        <div class="row my-5">
+            <div class="col-md-6 pt-5">
+                <h2 class="display-2 mb-5 text-md-start">Weather App</h2>
+                <p class="mb-4 text-muted text-md-start">Far far away, behind the word mountains, far from the countries
+                    Vokalia and
                     Consonantia,
                     there live the blind texts.
                     Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A
                     small river named
                     Duden flows by</p>
-                <div><a href="#" class="btn btn-outline">View detail project</a></div>
+                <div><a href="#" class="btn btn-outline d-block d-sm-inline">View detail project</a></div>
             </div>
-            <div class="col-6">
-
+            <div class="col-md-6 d-none d-md-block">
+                <img src="/images/images (1).png" class="img-fluid" alt="weather app">
 
             </div>
         </div>
-        <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6">
+        <div class="row my-5">
+            <div class="col-md-6 d-none d-md-block">
+                <img src="/images/images (2).png" alt="dictionary app" class="img-fluid">
+            </div>
+            <div class="col-md-6 pt-5">
 
-                <h2 class="display-2 mb-5">Dictionary App</h2>
-                <p class="mb-4 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and
+                <h2 class="display-2 mb-5 text-md-start ">Dictionary App</h2>
+                <p class="mb-4 text-muted text-md-start ">Far far away, behind the word mountains, far from
+                    the countries
+                    Vokalia and
                     Consonantia,
                     there live the blind texts.
                     Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A
                     small river named
                     Duden flows by</p>
-                <div><a href="#" class="btn btn-outline">View detail project</a></div>
+                <div><a href="#" class="btn btn-outline d-block d-sm-inline">View detail project</a></div>
             </div>
         </div>
 </body>
