more SEO friendly

--- a/about.html
+++ b/about.html
@@ -22,9 +22,10 @@
 
 <body>
     <div class="container">
+
         <nav class="navbar navbar-expand-lg    mb-5">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/index.html">
                     <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -70,7 +71,7 @@
         </div>
 
 
-        <div class="row my-5 py-5 rounded" style=" background: rgba(249, 247, 254, 1);">
+        <div class="row my-5 py-5 rounded inquiry">
             <div class="col-md-6 mb-5 px-5  pt-5">
                 <h2>Work Inquiry</h2>
                 <p>Let's work together and i'll help you by all my best</p>
