--- a/work.html
+++ b/work.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta name="description" content="my official portfolio website">
+    <title>My work</title>
+    <meta name="description" content="my work">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -21,9 +21,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg  mb-5">
+    <nav class="navbar navbar-expand-lg mt-3 mb-5">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/index.html">
                 <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -55,49 +55,49 @@
 
 
         <div class="row  g-5">
-            <div class="col">
+            <div class="col-md-6">
                 <div class="card h-100 border-white">
-                    <img src="/images/images.png" class="card-img-top img-fluid" alt="youghurt ">
+                    <img src="/images/images.png" class="card-img-top rounded img-fluid" alt="youghurt ">
                     <div class="card-body">
                         <h5 class="card-title text-center">Yogurt Project</h5>
                         <p class="card-text text-center">Frontend Developer</p>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <div class="card h-100 border-white">
-                    <img src="/images/images (1).png" class="card-img-top img-fluid" alt="weather app">
+                    <img src="/images/images (1).png" class="card-img-top rounded img-fluid" alt="weather app">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Weather App</h5>
+                        <h5 class="card-title text-center ">Weather App</h5>
                         <p class="card-text text-center">Frontend Developer</p>
                     </div>
                 </div>
             </div>
             <div class="row mb-5 g-5">
-                <div class="col">
+                <div class="col-md-6">
                     <div class="card h-100 border-white">
-                        <img src="/images/images (2).png" class="card-img-top img-fluid" alt="dictionary app">
+                        <img src="/images/images (2).png" class="card-img-top rounded img-fluid" alt="dictionary app">
                         <div class="card-body">
                             <h5 class="card-title text-center">Dictionary</h5>
                             <p class="card-text text-center">Frontend Developer</p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card h-100 border-white">
+                <div class="col-md-6">
+                    <div class="card h-100 border-white text-center">
                         <img src="/images/images (3).png" class="card-img-top img-fluid" alt="translation app">
                         <div class="card-body">
-                            <h5 class="card-title text-center">Translation</h5>
+                            <h5 class="card-title text-center">Translator</h5>
                             <p class="card-text text-center">Frontend Developer</p>
                         </div>
                     </div>
                 </div>
 
             </div>
-            <div class="row my-5 py-5 rounded" style=" background: rgba(249, 247, 254, 1);">
+            <div class="row my-5 py-5 rounded inquiry">
                 <div class="col-md-6 mb-5 px-5  pt-5">
-                    <h2>Work Inquiry</h2>
-                    <p>Let's work together and i'll help you by all my best</p>
+                    <h2 class="text-md-start">Work Inquiry</h2>
+                    <p class="text-md-start">Let's work together and i'll help you by all my best</p>
                 </div>
                 <div class="col-md-6 mt-4 ps-5  pt-5  text-center">
                     <a href="#" class="btn hero-btn  d-block d-sm-inline ">Let's talk here</a>
@@ -106,12 +106,12 @@
 
         </div>
 
-        <div class="text-center mb-3">
+        <div class="text-center mb-4">
             <a href="mailto:cynthiaekhomwandolor@gmailcom"
                 class="text-reset text-decoration-none">cynthiaekhomwandolor@gmailcom</a>
 
         </div>
-        <div class="d-flex justify-content-center mb-5">
+        <div class="d-flex justify-content-center  mb-5">
             <i class="fa-brands fa-x-twitter mx-4" style="color: #6c63ff;"></i>
             <i class="fa-brands fa-linkedin mx-4" style="color: #6c63ff;"></i>
             <i class="fa-brands fa-instagram mx-4" style="color: #6c63ff;"></i>
