--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta name="description" content="my official portfolio website">
+    <title>contact me</title>
+    <meta name="description" content="mycontact">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -23,7 +23,7 @@
 <body>
     <nav class="navbar navbar-expand-lg  mb-5">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/index.html">
                 <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -53,7 +53,7 @@
     <div class="container">
         <h1>Let's get in touch!
         </h1>
-        <div class="row my-5 py-5 rounded" style=" background: rgba(249, 247, 254, 1);">
+        <div class="row my-5 py-5 rounded inquiry">
             <div class="col-md-6 mb-5 px-5  pt-5">
                 <h2>Work Inquiry</h2>
                 <p>Let's work together and i'll help you by all my best</p>
