--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
 <body>
     <div class="container">
 
-        <nav class="navbar navbar-expand-lg    mb-5">
-            <div class="container">
+        <nav class="navbar navbar-expand-md    mb-5 fixed-top hero">
+            <div class="container-fluid">
                 <a class="navbar-brand" href="/index.html">
                     <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
                 </a>
