--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 
 <body>
-    <section class="hero  vh-100 ">
-        <nav class="navbar navbar-expand-lg  mb-5">
+    <div class="hero  ">
+        <nav class="navbar navbar-expand-md  mb-5 fixed-top hero ">
             <div class="container">
                 <a class="navbar-brand" href="/index.html">
                     <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
@@ -31,7 +31,7 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse ms-5" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/about.html">Home</a>
@@ -53,11 +53,11 @@
         <!--nav ends here-->
 
         <h2 class="text-center mt-5">👋🏽 Hi, i am </h2>
-        <h1 class="text-center">Cynthia Ekhoe</h1>
+        <h1 class="text-center mb-2">Cynthia Ekhoe</h1>
         <p class="text-center mb-5 mt-2">Front-end developer based in Nigeria</p>
-        <div class="text-center"><a href="#" class="hero-btn btn btn-secondary  ">Contact Me</a></div>
+        <div class="text-center"><a href="#" class="hero-btn btn mb-5 btn-secondary  ">Contact Me</a></div>
 
-    </section>
+    </div>
     <div class="container">
         <p class="text-center m-5"> Featured Project which my best projects be choice to show</p>
         <div class="row my-5">
