--- a/work.html
+++ b/work.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg mt-3 mb-5">
+    <nav class="navbar navbar-expand-md  mb-5 fixed-top hero">
         <div class="container">
             <a class="navbar-brand" href="/index.html">
                 <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
@@ -50,9 +50,8 @@
         </div>
     </nav>
     <!--nav ends here-->
-    <div class="container">
-        <h1>Take a look at what I've <br> been working on!</h1>
-
+    <div class="container my-5">
+        <h1 class="work-hero ">Take a look at what I've <br> been working on!</h1>
 
         <div class="row  g-5">
             <div class="col-md-6">
