made website more responsive

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav ms-auto justify-content-flex-start">
                         <li class="nav-item">
                             <a class="nav-link " href="/index.html">Home</a>
                         </li>
@@ -57,15 +57,16 @@
 
             <div class="col-md-6 mb-5  pt-5 ">
 
-                <h2 class=" mb-5  text-md-start" style="font-family: var( --heading-fontfamily);">Hi, I am Cynthia Ekhoe
+                <h2 class=" mb-5  text-md-start heading text-center">Hi, I am Cynthia Ekhoe
                 </h2>
-                <h4 class="text-md-start mb-4">Frontend Developer, based in Nigeria.</h4>
-                <p class="text-muted text-md-start mb-5">For anyone who wants to start learning code, this workshop is
+                <h4 class="text-md-start mb-4 text-center">Frontend Developer, based in Nigeria.</h4>
+                <p class="text-muted text-md-start mb-5 text-center">For anyone who wants to start learning code, this
+                    workshop is
                     very interesting. You will be challenged with different
                     exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
                 <div><a href="#" class="btn hero-btn  d-block d-sm-inline ">View all project</a></div>
             </div>
-            <div class="col-md-6   ">
+            <div class="col-md-6   d-none d-md-block ">
                 <img src="/images/IMG_20220715_102510_085.jpg" alt="my image" class="img-fluid rounded mt-5">
             </div>
         </div>
@@ -73,8 +74,8 @@
 
         <div class="row my-5 py-5 rounded inquiry">
             <div class="col-md-6 mb-5 px-5  pt-5">
-                <h2>Work Inquiry</h2>
-                <p>Let's work together and i'll help you by all my best</p>
+                <h2 class="text-md-start text-center">Work Inquiry</h2>
+                <p class="text-md-start text-center">Let's work together and i'll help you by all my best</p>
             </div>
             <div class="col-md-6 mt-4 ps-5  pt-5  text-center">
                 <a href="#" class="btn hero-btn  d-block d-sm-inline ">Let's talk here</a>
