--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="hero  ">
         <nav class="navbar navbar-expand-md  mb-5 fixed-top hero ">
-            <div class="container">
+            <div class="container-fluid">
                 <a class="navbar-brand" href="/index.html">
                     <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
                 </a>
@@ -52,10 +52,10 @@
         </nav>
         <!--nav ends here-->
 
-        <h2 class="text-center mt-5">👋🏽 Hi, i am </h2>
-        <h1 class="text-center mb-2">Cynthia Ekhoe</h1>
+        <h2 class="text-center mt-5 pt-5">👋🏽 Hi, i am </h2>
+        <h1 class="text-center mb-2 heading">Cynthia Ekhoe</h1>
         <p class="text-center mb-5 mt-2">Front-end developer based in Nigeria</p>
-        <div class="text-center"><a href="#" class="hero-btn btn mb-5 btn-secondary  ">Contact Me</a></div>
+        <div class="text-center mb-5"><a href="#" class="hero-btn btn mb-5  btn-secondary  ">Contact Me</a></div>
 
     </div>
     <div class="container">
