--- a/work.html
+++ b/work.html
@@ -22,16 +22,16 @@
 
 <body>
     <nav class="navbar navbar-expand-md  mb-5 fixed-top hero">
-        <div class="container">
+        <div class="container-fluid">
             <a class="navbar-brand" href="/index.html">
-                <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
+                <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid ms-3">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto justify-content-flex-start">
                     <li class="nav-item">
                         <a class="nav-link " href="/about.html">Home</a>
                     </li>
@@ -51,7 +51,7 @@
     </nav>
     <!--nav ends here-->
     <div class="container my-5">
-        <h1 class="work-hero ">Take a look at what I've <br> been working on!</h1>
+        <h1 class="work-hero heading  text-md-start text-center">Take a look at what I've <br> been working on!</h1>
 
         <div class="row  g-5">
             <div class="col-md-6">
@@ -95,10 +95,10 @@
             </div>
             <div class="row my-5 py-5 rounded inquiry">
                 <div class="col-md-6 mb-5 px-5  pt-5">
-                    <h2 class="text-md-start">Work Inquiry</h2>
-                    <p class="text-md-start">Let's work together and i'll help you by all my best</p>
+                    <h2 class="text-md-start text-center">Work Inquiry</h2>
+                    <p class="text-md-start text-center">Let's work together and i'll help you by all my best</p>
                 </div>
-                <div class="col-md-6 mt-4 ps-5  pt-5  text-center">
+                <div class="col-md-6 mt-2 ps-5  pt-5  text-center">
                     <a href="#" class="btn hero-btn  d-block d-sm-inline ">Let's talk here</a>
                 </div>
             </div>
