made website responsive

--- a/about.html
+++ b/about.html
@@ -21,68 +21,70 @@
 </head>
 
 <body>
-    <div class="container">
 
-        <nav class="navbar navbar-expand-md    mb-5 fixed-top hero">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">
-                    <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto justify-content-flex-start">
-                        <li class="nav-item">
-                            <a class="nav-link " href="/index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/work.html">Work</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/contact.html">Contact</a>
-                        </li>
 
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!--nav ends here-->
+    <nav class="navbar navbar-expand-md    fixed-top hero">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/index.html">
+                <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="navbarNav">
+                <ul class="navbar-nav ms-auto me-5 justify-content-flex-start">
+                    <li class="nav-item">
+                        <a class="nav-link " href="/index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/work.html">Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact.html">Contact</a>
+                    </li>
 
-        <div class="row my-5 py-5">
-
-            <div class="col-md-6 mb-5  pt-5 ">
-
-                <h2 class=" mb-5  text-md-start heading text-center">Hi, I am Cynthia Ekhoe
-                </h2>
-                <h4 class="text-md-start mb-4 text-center">Frontend Developer, based in Nigeria.</h4>
-                <p class="text-muted text-md-start mb-5 text-center">For anyone who wants to start learning code, this
-                    workshop is
-                    very interesting. You will be challenged with different
-                    exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
-                <div><a href="#" class="btn hero-btn  d-block d-sm-inline ">View all project</a></div>
-            </div>
-            <div class="col-md-6   d-none d-md-block ">
-                <img src="/images/IMG_20220715_102510_085.jpg" alt="my image" class="img-fluid rounded mt-5">
+                </ul>
             </div>
         </div>
+    </nav>
+    <!--nav ends here-->
 
+    <div class="row my-5 py-5">
 
-        <div class="row my-5 py-5 rounded inquiry">
-            <div class="col-md-6 mb-5 px-5  pt-5">
-                <h2 class="text-md-start text-center">Work Inquiry</h2>
-                <p class="text-md-start text-center">Let's work together and i'll help you by all my best</p>
-            </div>
-            <div class="col-md-6 mt-4 ps-5  pt-5  text-center">
-                <a href="#" class="btn hero-btn  d-block d-sm-inline ">Let's talk here</a>
-            </div>
+        <div class="col-md-6 mb-5  pt-5 ">
+
+            <h1 class=" mb-5  text-md-start heading text-center text-break ">Hi, I am Cynthia
+                Ekhoe
+            </h1>
+            <h4 class="text-md-start mb-4 text-center  ">Frontend Developer, based in Nigeria.
+            </h4>
+            <p class="text-muted text-md-start mb-5 text-center ">For anyone who wants to start learning code, this
+                workshop is
+                very interesting. You will be challenged with different
+                exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
+            <div><a href="#" class="btn hero-btn  d-block d-sm-inline ">View all project</a></div>
         </div>
-
+        <div class="col-md-6   d-none d-md-block ">
+            <img src="/images/IMG_20220715_102510_085.jpg" alt="my image" class="img-fluid rounded mt-5">
+        </div>
     </div>
+
+
+    <div class="row my-5 py-5 rounded inquiry">
+        <div class="col-md-6 mb-5 px-5  pt-5">
+            <h2 class="text-md-start text-center">Work Inquiry</h2>
+            <p class="text-md-start text-center">Let's work together and i'll help you by all my best</p>
+        </div>
+        <div class="col-md-6 mt-4 ps-5  pt-5  text-center">
+            <a href="#" class="btn hero-btn  d-block d-sm-inline ">Let's talk here</a>
+        </div>
+    </div>
+
+
 
     <div class="text-center mb-3">
         <a href="mailto:cynthiaekhomwandolor@gmailcom"
