--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse ms-2" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link " href="/index.html">Home</a>
@@ -51,15 +51,15 @@
     </nav>
     <!--nav ends here-->
     <div class="container">
-        <h1>Let's get in touch!
-        </h1>
+        <h2 class="work-hero">Let's get in touch!
+        </h2>
         <div class="row my-5 py-5 rounded inquiry">
             <div class="col-md-6 mb-5 px-5  pt-5">
-                <h2>Work Inquiry</h2>
-                <p>Let's work together and i'll help you by all my best</p>
+                <h2 class="text-md-start text-center">Work Inquiry</h2>
+                <p class="text-md-start text-center">Let's work together and i'll help you by all my best</p>
             </div>
             <div class="col-md-6 mt-4 ps-5  pt-5  text-center">
-                <a href="#" class="btn hero-btn  d-block d-sm-inline ">Let's talk here</a>
+                <a href="#" class="btn btn-fill d-block d-sm-inline ">Let's talk here</a>
             </div>
         </div>
 
