--- a/index.html
+++ b/index.html
@@ -21,43 +21,45 @@
 </head>
 
 <body>
-    <div class="hero  ">
-        <nav class="navbar navbar-expand-md  mb-5 fixed-top hero ">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">
-                    <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse ms-5" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/about.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/work.html">Work</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/contact.html">Contact</a>
-                        </li>
 
-                    </ul>
-                </div>
+
+    <nav class="navbar navbar-expand-md bg-body-tertiary fixed-top mb-5">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/index.html">
+                <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
+            </a>
+            <button class=" navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse   " id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto me-5 justify-content-flex-start   ">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about.html">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/work.html">Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact.html">Contact </a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-        <!--nav ends here-->
+        </div>
+    </nav>
+    <!--nav ends here-->
 
-        <h2 class="text-center mt-5 pt-5">👋🏽 Hi, i am </h2>
-        <h1 class="text-center mb-2 heading">Cynthia Ekhoe</h1>
-        <p class="text-center mb-5 mt-2">Front-end developer based in Nigeria</p>
-        <div class="text-center mb-5"><a href="#" class="hero-btn btn mb-5  btn-secondary  ">Contact Me</a></div>
-
+    <h2 class="text-center mt-5 pt-5">👋🏽 Hi, i am </h2>
+    <h1 class="text-center mb-2 heading  ">Cynthia Ekhoe</h1>
+    <p class="text-center mb-5 mt-2">Front-end developer based in Nigeria</p>
+    <div class="text-center mb-5"><a href="#" class="btn-fill btn mb-5  btn-secondary  ">Contact Me</a>
     </div>
+
+
+
     <div class="container">
         <p class="text-center m-5"> Featured Project which my best projects be choice to show</p>
         <div class="row my-5">
@@ -67,13 +69,15 @@
             <div class="col-md-6 pt-5">
 
                 <h2 class="display-2 mb-5  text-md-start">Yogurt Project</h2>
-                <p class="mb-4 text-muted text-md-start">Far far away, behind the word mountains, far from the countries
+                <p class="mb-4 text-muted text-md-start">Far far away, behind the word mountains, far from the
+                    countries
                     Vokalia and
                     Consonantia,
                     there
                     live the blind
                     texts.
-                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A
+                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
+                    ocean. A
                     small
                     river named
                     Duden flows by</p>
@@ -83,11 +87,13 @@
         <div class="row my-5">
             <div class="col-md-6 pt-5">
                 <h2 class="display-2 mb-5 text-md-start">Weather App</h2>
-                <p class="mb-4 text-muted text-md-start">Far far away, behind the word mountains, far from the countries
+                <p class="mb-4 text-muted text-md-start">Far far away, behind the word mountains, far from the
+                    countries
                     Vokalia and
                     Consonantia,
                     there live the blind texts.
-                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A
+                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
+                    ocean. A
                     small river named
                     Duden flows by</p>
                 <div><a href="#" class="btn btn-outline d-block d-sm-inline">View detail project</a></div>
@@ -109,12 +115,14 @@
                     Vokalia and
                     Consonantia,
                     there live the blind texts.
-                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A
+                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
+                    ocean. A
                     small river named
                     Duden flows by</p>
                 <div><a href="#" class="btn btn-outline d-block d-sm-inline">View detail project</a></div>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
