corrected missing buttons

--- a/work.html
+++ b/work.html
@@ -99,7 +99,7 @@
                     <p class="text-md-start text-center">Let's work together and i'll help you by all my best</p>
                 </div>
                 <div class="col-md-6 mt-2 ps-5  pt-5  text-center">
-                    <a href="#" class="btn hero-btn  d-block d-sm-inline ">Let's talk here</a>
+                    <a href="#" class="btn btn-fill  d-block d-sm-inline ">Let's talk here</a>
                 </div>
             </div>
 
