--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                 workshop is
                 very interesting. You will be challenged with different
                 exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
-            <div><a href="#" class="btn hero-btn  d-block d-sm-inline ">View all project</a></div>
+            <div><a href="/work.html" class="btn btn-outline  d-block d-sm-inline ">View all projects</a></div>
         </div>
         <div class="col-md-6   d-none d-md-block ">
             <img src="/images/IMG_20220715_102510_085.jpg" alt="my image" class="img-fluid rounded mt-5">
@@ -80,7 +80,7 @@
             <p class="text-md-start text-center">Let's work together and i'll help you by all my best</p>
         </div>
         <div class="col-md-6 mt-4 ps-5  pt-5  text-center">
-            <a href="#" class="btn hero-btn  d-block d-sm-inline ">Let's talk here</a>
+            <a href="/contact.html" class="btn btn-fill d-block d-sm-inline ">Let's talk here</a>
         </div>
     </div>
 
