--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2 class="text-center mt-5 pt-5">👋🏽 Hi, i am </h2>
         <h1 class="text-center mb-2 heading  ">Cynthia Ekhoe</h1>
         <p class="text-center mb-5 mt-2">Front-end developer based in Nigeria</p>
-        <div class="text-center mb-5"><a href="#" class="btn-fill btn mb-5  btn-secondary  ">Contact Me</a>
+        <div class="text-center mb-5"><a href="/contact.html" class="btn-fill btn mb-5  btn-secondary  ">Contact Me</a>
         </div>
     </section>
 
