made about page more responsive

--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-md    fixed-top hero">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-md    fixed-top bg-white">
+        <div class="container">
             <a class="navbar-brand" href="/index.html">
                 <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
             </a>
@@ -53,22 +53,22 @@
     </nav>
     <!--nav ends here-->
     <div class="container">
-        <div class="row my-5 py-5">
+        <div class="row my-5 p-5  gx-5">
 
             <div class="col-md-6 mb-5  pt-5 ">
 
-                <h1 class=" mb-5  text-md-start heading text-center text-break ">Hi, I am Cynthia
+                <h1 class="  about-h1 my-5  text-md-start heading text-center text-break ">Hi, I am Cynthia
                     Ekhoe
                 </h1>
-                <h4 class="text-md-start mb-4 text-center  ">Frontend Developer, based in Nigeria.
-                </h4>
+                <h2 class=" about-h2 text-md-start mb-4 text-center  ">Frontend Developer, based in Nigeria.
+                </h2>
                 <p class="text-muted text-md-start mb-5 text-center ">For anyone who wants to start learning code, this
                     workshop is
                     very interesting. You will be challenged with different
                     exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
-                <div><a href="/work.html" class="btn btn-outline  d-block d-sm-inline ">View all projects</a></div>
+                <div><a href="/work.html" class="btn btn-fill  d-block d-md-inline ">View all projects</a></div>
             </div>
-            <div class="col-md-6   d-none d-md-block ">
+            <div class="col-md-6   ">
                 <img src="/images/IMG_20220715_102510_085.jpg" alt="my image" class="img-fluid rounded mt-5">
             </div>
         </div>
@@ -79,8 +79,8 @@
                 <h2 class="text-md-start text-center">Work Inquiry</h2>
                 <p class="text-md-start text-center">Let's work together and i'll help you by all my best</p>
             </div>
-            <div class="col-md-6 mt-4 ps-5  pt-5  text-center">
-                <a href="/contact.html" class="btn btn-fill d-block d-sm-inline ">Let's talk here</a>
+            <div class="col-md-6 mt-4   pt-5  text-center">
+                <a href="/contact.html" class="btn btn-fill d-block d-md-inline ">Let's talk here</a>
             </div>
         </div>
 
