--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <nav class="navbar navbar-expand-md bg-body-tertiary fixed-top mb-5">
-        <div class="container-fluid">
+        <div class="container">
             <a class="navbar-brand" href="/index.html">
                 <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
             </a>
@@ -58,8 +58,6 @@
         <div class="text-center mb-5"><a href="/contact.html" class="btn-fill btn mb-5  btn-secondary  ">Contact Me</a>
         </div>
     </section>
-
-
 
     <div class="container">
         <p class="text-center m-5"> Featured Project which my best projects be choice to show</p>
