--- a/work.html
+++ b/work.html
@@ -22,7 +22,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md  mb-5 fixed-top hero">
-        <div class="container-fluid">
+        <div class="container">
             <a class="navbar-brand" href="/index.html">
                 <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid ms-3">
             </a>
