--- a/work.html
+++ b/work.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md  mb-5 fixed-top hero">
+    <nav class="navbar navbar-expand-md  mb-5  fixed-top bg-white">
         <div class="container">
             <a class="navbar-brand" href="/index.html">
                 <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid ms-3">
@@ -50,8 +50,10 @@
         </div>
     </nav>
     <!--nav ends here-->
-    <div class="container my-5">
-        <h1 class="work-hero heading  text-md-start text-center ">Take a look at what I've <br> been working on!</h1>
+    <div class="container ">
+        <h1 class="work-hero heading  text-md-start text-center about-h1  text-break">Take a look at what I've <br> been
+            working
+            on!</h1>
 
         <div class="row  g-5">
             <div class="col-md-6">
@@ -59,7 +61,7 @@
                     <img src="/images/images.png" class="card-img-top rounded img-fluid" alt="youghurt ">
                     <div class="card-body">
                         <h5 class="card-title text-center">Yogurt Project</h5>
-                        <p class="card-text text-center">Frontend Developer</p>
+                        <p class="card-text text-center text-muted">Built with HTML and CSS</p>
                     </div>
                 </div>
             </div>
@@ -68,7 +70,7 @@
                     <img src="/images/images (1).png" class="card-img-top rounded img-fluid" alt="weather app">
                     <div class="card-body">
                         <h5 class="card-title text-center ">Weather App</h5>
-                        <p class="card-text text-center">Frontend Developer</p>
+                        <p class="card-text text-center text-muted">Built with HTML , CSS and Javascript</p>
                     </div>
                 </div>
             </div>
@@ -78,7 +80,7 @@
                         <img src="/images/images (2).png" class="card-img-top rounded img-fluid" alt="dictionary app">
                         <div class="card-body">
                             <h5 class="card-title text-center">Dictionary</h5>
-                            <p class="card-text text-center">Frontend Developer</p>
+                            <p class="card-text text-center text-muted">Built with HTML and React</p>
                         </div>
                     </div>
                 </div>
@@ -87,7 +89,7 @@
                         <img src="/images/images (3).png" class="card-img-top img-fluid" alt="translation app">
                         <div class="card-body">
                             <h5 class="card-title text-center">Translator</h5>
-                            <p class="card-text text-center">Frontend Developer</p>
+                            <p class="card-text text-center text-muted">Built with HTML , CSS and React</p>
                         </div>
                     </div>
                 </div>
@@ -98,7 +100,7 @@
                     <h2 class="text-md-start text-center">Work Inquiry</h2>
                     <p class="text-md-start text-center">Let's work together and i'll help you by all my best</p>
                 </div>
-                <div class="col-md-6 mt-2 ps-5  pt-5  text-center">
+                <div class="col-md-6 mt-2   pt-5  text-center">
                     <a href="#" class="btn btn-fill  d-block d-sm-inline ">Let's talk here</a>
                 </div>
             </div>
