modified the contact page

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md  mb-5 fixed-top hero">
+    <nav class="navbar navbar-expand-md   mb-5 fixed-top bg-white">
         <div class="container">
             <a class="navbar-brand" href="/index.html">
                 <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
@@ -51,32 +51,24 @@
     </nav>
     <!--nav ends here-->
     <div class="container">
-        <h2 class="work-hero">Let's get in touch!
-        </h2>
-        <div class="row my-5 py-5 rounded inquiry">
-            <div class="col-md-6 mb-5 px-5  pt-5">
-                <h2 class="text-md-start text-center">Work Inquiry</h2>
-                <p class="text-md-start text-center">Let's work together and i'll help you by all my best</p>
-            </div>
-            <div class="col-md-6 mt-4 ps-5  pt-5  text-center">
-                <a href="#" class="btn btn-fill d-block d-sm-inline ">Let's talk here</a>
-            </div>
-        </div>
+        <h1 class="work-hero text-center about-h1 ">Let's get in touch!
+        </h1>
+        <h3 class="text-center">Email</h3>
+        <p class="text-center"> <a href="mailto:cynthiaekhomwandolor@gmailcom" target="_blank"
+                class="text-decoration-none  ">cynthiaekhomwandolor@gmailcom</a></p>
+        <h3 class="text-center">Twitter</h3>
+        <p class="text-center"> <a href="https://twitter.com/ladyceewhy" target="_blank"
+                class="text-decoration-none  ">@ladyceewhy</a></p>
+        <h3 class="text-center">Instagram</h3>
+        <p class="text-center"> <a href=" https://www.instagram.com/officialcwhy" target="_blank"
+                class="text-decoration-none  ">@officialcwhy</a> </p>
+        <h3 class="text-center">Linkedin</h3>
+        <p class="text-center"> <a href="https://www.linkedin.com/in/cynthia-ekhoe" target="_blank"
+                class="  text-decoration-none   ">Cynthia
+                Ekhomwandolor</a>
+        </p>
 
     </div>
-
-    <div class="text-center mb-3">
-        <a href="mailto:cynthiaekhomwandolor@gmailcom"
-            class="text-reset text-decoration-none">cynthiaekhomwandolor@gmailcom</a>
-
-    </div>
-    <div class="d-flex justify-content-center mb-5">
-        <i class="fa-brands fa-x-twitter mx-4" style="color: #6c63ff;"></i>
-        <i class="fa-brands fa-linkedin mx-4" style="color: #6c63ff;"></i>
-        <i class="fa-brands fa-instagram mx-4" style="color: #6c63ff;"></i>
-    </div>
-    </div>
-
 </body>
 
 </html>
