Edited the footer

--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,8 @@
         </div>
     </nav>
     <!--nav ends here-->
-    <div class="container">
-        <h1 class="work-hero text-center about-h1 ">Let's get in touch!
+    <div class="container work-hero">
+        <h1 class=" text-center about-h1 ">Let's get in touch!
         </h1>
         <h3 class="text-center">Email</h3>
         <p class="text-center"> <a href="mailto:cynthiaekhomwandolor@gmailcom" target="_blank"
