--- a/index.html
+++ b/index.html
@@ -122,6 +122,33 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <div class="row my-5 py-5 rounded inquiry">
+            <div class="col-md-6 mb-5 px-5  pt-5">
+                <h2 class="text-md-start text-center">Work Inquiry</h2>
+                <p class="text-md-start text-center">Let's work together and i'll help you by all my best</p>
+            </div>
+            <div class="col-md-6 mt-4   pt-5  text-center">
+                <a href="/contact.html" class="btn btn-fill d-block d-md-inline ">Let's talk here</a>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="text-center mb-3">
+            <a href="mailto:cynthiaekhomwandolor@gmailcom" class="email-link">cynthiaekhomwandolor@gmailcom</a>
+        </div>
+        <div class="d-flex justify-content-center  mb-5">
+            <a href="https://twitter.com/ladyceewhy" target="_blank" class="socials"><i
+                    class="fa-brands fa-x-twitter   fs-4   "></i></a>
+            <a href="https://www.linkedin.com/in/cynthia-ekhoe" target="_blank" class="socials"><i
+                    class="fa-brands fa-linkedin fs-4    "></i></a>
+            <a href="https://www.instagram.com/officialcwhy" target="_blank" class="socials  "><i
+                    class="fa-brands fa-instagram  fs-4    "></i></a>
+            <a href="https://github.com/ceeygithub" target="_blank" class="socials  "><i
+                    class="fa-brands fa-github  fs-4    "></i></a>
+        </div>
+    </footer>
 </body>
 
 </html>
