--- a/work.html
+++ b/work.html
@@ -50,8 +50,8 @@
         </div>
     </nav>
     <!--nav ends here-->
-    <div class="container ">
-        <h1 class="work-hero heading  text-md-start text-center about-h1  text-break">Take a look at what I've <br> been
+    <div class="container work-hero ">
+        <h1 class=" heading  text-md-start text-center about-h1  text-break">Take a look at what I've <br> been
             working
             on!</h1>
 
@@ -95,7 +95,9 @@
                 </div>
 
             </div>
-            <div class="row my-5 py-5 rounded inquiry">
+        </div>
+        <div class="container">
+            <div class="row my-5 py-5 rounded inquiry ">
                 <div class="col-md-6 mb-5 px-5  pt-5">
                     <h2 class="text-md-start text-center">Work Inquiry</h2>
                     <p class="text-md-start text-center">Let's work together and i'll help you by all my best</p>
@@ -104,19 +106,23 @@
                     <a href="#" class="btn btn-fill  d-block d-sm-inline ">Let's talk here</a>
                 </div>
             </div>
-
         </div>
+        <footer>
+            <div class="text-center mb-4">
+                <a href="mailto:cynthiaekhomwandolor@gmailcom" class="email-link">cynthiaekhomwandolor@gmailcom</a>
 
-        <div class="text-center mb-4">
-            <a href="mailto:cynthiaekhomwandolor@gmailcom"
-                class="text-reset text-decoration-none">cynthiaekhomwandolor@gmailcom</a>
-
-        </div>
-        <div class="d-flex justify-content-center  mb-5">
-            <i class="fa-brands fa-x-twitter mx-4" style="color: #6c63ff;"></i>
-            <i class="fa-brands fa-linkedin mx-4" style="color: #6c63ff;"></i>
-            <i class="fa-brands fa-instagram mx-4" style="color: #6c63ff;"></i>
-        </div>
+            </div>
+            <div class="d-flex justify-content-center  mb-5">
+                <a href="https://twitter.com/ladyceewhy" target="_blank" class="socials"><i
+                        class="fa-brands fa-x-twitter   fs-4   "></i></a>
+                <a href="https://www.linkedin.com/in/cynthia-ekhoe" target="_blank" class="socials"><i
+                        class="fa-brands fa-linkedin fs-4    "></i></a>
+                <a href="https://www.instagram.com/officialcwhy" target="_blank" class="socials  "><i
+                        class="fa-brands fa-instagram  fs-4    "></i></a>
+                <a href="https://github.com/ceeygithub" target="_blank" class="socials  "><i
+                        class="fa-brands fa-github  fs-4    "></i></a>
+            </div>
+        </footer>
     </div>
 </body>
 
