Made website more SEO friendly

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
+    <title>About Cynthia</title>
     <meta name="description" content="About me">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-md    fixed-top bg-white">
         <div class="container">
             <a class="navbar-brand" href="/index.html">
-                <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
+                <img src="/images/ceey (1).png" alt="logo" width="100" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,16 +35,17 @@
             <div class="collapse navbar-collapse " id="navbarNav">
                 <ul class="navbar-nav ms-auto me-5 justify-content-flex-start">
                     <li class="nav-item">
-                        <a class="nav-link " href="/index.html">Home</a>
+                        <a class="nav-link " href="/index.html" title="Homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/about.html">About</a>
+                        <a class="nav-link active-link" aria-current="page" href="/about.html"
+                            title="About Cynthia">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/work.html">Work</a>
+                        <a class="nav-link" href="/work.html" title=" Cynthia's work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact</a>
+                        <a class="nav-link" href="/contact.html" title="Contact Cynthia">Contact</a>
                     </li>
 
                 </ul>
@@ -94,11 +95,13 @@
                 class="fa-brands fa-x-twitter   fs-4   "></i></a>
         <a href="https://www.linkedin.com/in/cynthia-ekhoe" target="_blank" class="socials"><i
                 class="fa-brands fa-linkedin fs-4    "></i></a>
-        <a href="https://www.instagram.com/officialcwhy" target="_blank" class="socials  "><i
-                class="fa-brands fa-instagram  fs-4    "></i></a>
+
         <a href="https://github.com/ceeygithub" target="_blank" class="socials  "><i
                 class="fa-brands fa-github  fs-4    "></i></a>
     </div>
+    <p class="text-center my-4">✌🏽This project was coded by Cynthia and it is <a
+            href="https://github.com/ceeygithub/porfolio-project" class="active-link " target="_blank">open
+            sourced </a></p>
     </div>
 </body>
 
