--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contact me</title>
+    <title>Contact Cynthia</title>
     <meta name="description" content="mycontact">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-md   mb-5 fixed-top bg-white">
         <div class="container">
             <a class="navbar-brand" href="/index.html">
-                <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
+                <img src="/images/ceey (1).png" alt="logo" width="100" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,16 +33,17 @@
             <div class="collapse navbar-collapse ms-2" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link " href="/index.html">Home</a>
+                        <a class="nav-link " href="/index.html" title="Homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="/about.html" title="About Cynthia">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/work.html">Work</a>
+                        <a class="nav-link " href="/work.html" title="Cynthia's work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/contact.html">Contact</a>
+                        <a class="nav-link active-link" aria-current="page" href="/contact.html"
+                            title="Contact Cynthia">Contact</a>
                     </li>
 
                 </ul>
@@ -55,19 +56,23 @@
         </h1>
         <h3 class="text-center">Email</h3>
         <p class="text-center"> <a href="mailto:cynthiaekhomwandolor@gmailcom" target="_blank"
-                class="text-decoration-none  ">cynthiaekhomwandolor@gmailcom</a></p>
+                class="text-decoration-none active-link ">cynthiaekhomwandolor@gmailcom</a></p>
         <h3 class="text-center">Twitter</h3>
         <p class="text-center"> <a href="https://twitter.com/ladyceewhy" target="_blank"
-                class="text-decoration-none  ">@ladyceewhy</a></p>
-        <h3 class="text-center">Instagram</h3>
-        <p class="text-center"> <a href=" https://www.instagram.com/officialcwhy" target="_blank"
-                class="text-decoration-none  ">@officialcwhy</a> </p>
+                class="text-decoration-none  active-link">@ladyceewhy</a></p>
+
         <h3 class="text-center">Linkedin</h3>
         <p class="text-center"> <a href="https://www.linkedin.com/in/cynthia-ekhoe" target="_blank"
-                class="  text-decoration-none   ">Cynthia
+                class="  text-decoration-none  active-link ">Cynthia
                 Ekhomwandolor</a>
         </p>
-
+        <h3 class="text-center">Github</h3>
+        <p class="text-center"> <a href="https://github.com/ceeygithub" target="_blank"
+                class="  text-decoration-none  active-link ">ceeygithub</a>
+        </p>
+        <p class="text-center my-4">✌🏽This project was coded by Cynthia and it is <a
+                href="https://github.com/ceeygithub/porfolio-project" class="active-link " target="_blank">open
+                sourced </a></p>
     </div>
 </body>
 
