--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>frontend developer-Cynthia Ekhoe</title>
-    <meta name="description" content="my official portfolio website">
+    <meta name="description" content="Cynthia is a professional Front-end developer based in Nigeria">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-md bg-body-tertiary fixed-top mb-5">
         <div class="container">
             <a class="navbar-brand" href="/index.html">
-                <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid">
+                <img src="/images/ceey (1).png" alt="logo" width="100" class="img-fluid">
             </a>
             <button class=" navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,16 +35,16 @@
             <div class="collapse navbar-collapse   " id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto me-5 justify-content-flex-start   ">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active-link" aria-current="page" href="/index.html" title="Homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About me</a>
+                        <a class="nav-link" href="/about.html" title="About Cynthia">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/work.html">Work</a>
+                        <a class="nav-link" href="/work.html" title="Cynthia's work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact </a>
+                        <a class="nav-link" href="/contact.html" title="Contact Cynthia">Contact </a>
                     </li>
                 </ul>
             </div>
@@ -55,15 +55,16 @@
         <h2 class="text-center mt-5 pt-5">👋🏽 Hi, i am </h2>
         <h1 class="text-center mb-2 heading  ">Cynthia Ekhoe</h1>
         <p class="text-center mb-5 mt-2">Front-end developer based in Nigeria</p>
-        <div class="text-center mb-5"><a href="/contact.html" class="btn-fill btn mb-5  btn-secondary  ">Contact Me</a>
+        <div class="text-center mb-5"><a href="/contact.html" class="btn-fill btn mb-5  btn-secondary  "
+                title="Contact Cynthia">Contact Me</a>
         </div>
     </section>
 
-    <div class="container">
+    <div class="container px-0">
         <p class="text-center m-5"> Featured Project which my best projects be choice to show</p>
         <div class="row my-5">
             <div class="col-md-6 d-none d-md-block">
-                <img src="/images/images.png" alt="youghurt article" class="img-fluid">
+                <img src="/images/images.png" alt="youghurt project" class="img-fluid">
             </div>
             <div class="col-md-6 pt-5">
 
@@ -123,14 +124,14 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container px-0">
         <div class="row my-5 py-5 rounded inquiry">
             <div class="col-md-6 mb-5 px-5  pt-5">
                 <h2 class="text-md-start text-center">Work Inquiry</h2>
                 <p class="text-md-start text-center">Let's work together and i'll help you by all my best</p>
             </div>
             <div class="col-md-6 mt-4   pt-5  text-center">
-                <a href="/contact.html" class="btn btn-fill d-block d-md-inline ">Let's talk here</a>
+                <a href="/contact.html" class="btn btn-fill   d-md-inline ">Let's talk here</a>
             </div>
         </div>
     </div>
@@ -143,11 +144,13 @@
                     class="fa-brands fa-x-twitter   fs-4   "></i></a>
             <a href="https://www.linkedin.com/in/cynthia-ekhoe" target="_blank" class="socials"><i
                     class="fa-brands fa-linkedin fs-4    "></i></a>
-            <a href="https://www.instagram.com/officialcwhy" target="_blank" class="socials  "><i
-                    class="fa-brands fa-instagram  fs-4    "></i></a>
+
             <a href="https://github.com/ceeygithub" target="_blank" class="socials  "><i
                     class="fa-brands fa-github  fs-4    "></i></a>
         </div>
+        <p class="text-center my-4">✌🏽This project was coded by Cynthia and it is <a
+                href="https://github.com/ceeygithub/porfolio-project" class="active-link " target="_blank">open
+                sourced </a></p>
     </footer>
 </body>
 
