--- a/work.html
+++ b/work.html
@@ -21,10 +21,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md  mb-5  fixed-top bg-white">
+    <nav class="navbar navbar-expand-md  mb-5  px-0 fixed-top bg-white">
         <div class="container">
             <a class="navbar-brand" href="/index.html">
-                <img src="/images/ceey (2).png" alt="logo" width="100" class="img-fluid ms-3">
+                <img src="/images/ceey (1).png" alt="logo" width="100" class="img-fluid ms-3">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,16 +33,17 @@
             <div class="collapse navbar-collapse " id="navbarNav">
                 <ul class="navbar-nav ms-auto justify-content-flex-start">
                     <li class="nav-item">
-                        <a class="nav-link " href="/about.html">Home</a>
+                        <a class="nav-link " href="/about.html" title="Homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="/about.html" title="About Cynthia">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/work.html">Work</a>
+                        <a class="nav-link active-link" aria-current="page" href="/work.html"
+                            title="Cynthia's work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact</a>
+                        <a class="nav-link" href="/contact.html" title="Contact Cynthia">Contact</a>
                     </li>
 
                 </ul>
@@ -50,15 +51,15 @@
         </div>
     </nav>
     <!--nav ends here-->
-    <div class="container work-hero ">
-        <h1 class=" heading  text-md-start text-center about-h1  text-break">Take a look at what I've <br> been
+    <div class="container work-hero px-0">
+        <h1 class=" heading  text-md-start text-center about-h1  text-break mb-5">Take a look at what I've <br>been
             working
             on!</h1>
 
         <div class="row  g-5">
             <div class="col-md-6">
                 <div class="card h-100 border-white">
-                    <img src="/images/images.png" class="card-img-top rounded img-fluid" alt="youghurt ">
+                    <img src="/images/images.png" class="card-img-top rounded img-fluid" alt="youghurt project ">
                     <div class="card-body">
                         <h5 class="card-title text-center">Yogurt Project</h5>
                         <p class="card-text text-center text-muted">Built with HTML and CSS</p>
@@ -96,7 +97,7 @@
 
             </div>
         </div>
-        <div class="container">
+        <div class="container px-0">
             <div class="row my-5 py-5 rounded inquiry ">
                 <div class="col-md-6 mb-5 px-5  pt-5">
                     <h2 class="text-md-start text-center">Work Inquiry</h2>
@@ -117,11 +118,13 @@
                         class="fa-brands fa-x-twitter   fs-4   "></i></a>
                 <a href="https://www.linkedin.com/in/cynthia-ekhoe" target="_blank" class="socials"><i
                         class="fa-brands fa-linkedin fs-4    "></i></a>
-                <a href="https://www.instagram.com/officialcwhy" target="_blank" class="socials  "><i
-                        class="fa-brands fa-instagram  fs-4    "></i></a>
+
                 <a href="https://github.com/ceeygithub" target="_blank" class="socials  "><i
                         class="fa-brands fa-github  fs-4    "></i></a>
             </div>
+            <p class="text-center my-4">✌🏽This project was coded by Cynthia and it is <a
+                    href="https://github.com/ceeygithub/porfolio-project" class="active-link " target="_blank">open
+                    sourced </a></p>
         </footer>
     </div>
 </body>
