deleted unused images

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 
             <div class="col-md-6 mb-5  pt-5 ">
 
-                <h1 class="  about-h1 my-5  text-md-start heading text-center text-break ">Hi, I am Cynthia
+                <h1 class="  about-h1   text-md-start heading text-center text-break ">Hi, I am Cynthia
                     Ekhoe
                 </h1>
                 <h2 class=" about-h2 text-md-start mb-4 text-center  ">Frontend Developer, based in Nigeria.
@@ -70,7 +70,7 @@
                 <div><a href="/work.html" class="btn btn-fill  d-block d-md-inline ">View all projects</a></div>
             </div>
             <div class="col-md-6   ">
-                <img src="/images/IMG_20220715_102510_085.jpg" alt="my image" class="img-fluid rounded mt-5">
+                <img src="/images/1664996290162.jpg" alt="my image" class="img-fluid rounded mt-5">
             </div>
         </div>
 
